# sioyek-python-extensions

./: .gitignore  README.md  pyproject.toml
src/sioyek/: add_text.py  dual_panelify.py  embed_annotations.py  extract_highlights.py  import_annotations.py  paper_downloader.py  remove_annotation.py  sioyek.py  translate.py
